# COMPASS

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: compass_example.yaml
data/: README.md
docs/: release_checklist.md
scripts/: crop_roi.py  generate_omvp.py  resample_to_npy.py  train_baseline_3d.py  train_compass.py  train_stage1_alignment.py  visualize_feature_maps.py
src/compass/: __init__.py  datasets.py  datasets_cla.py  models.py  resnet3d.py  segmentation.py  vit3d.py
